<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    
<item android:id="@+id/menu_user_profile"
        android:title="@string/menu_user_profile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_agenda" />
 
<item android:id="@+id/menu_send_location_manual"
        android:title="@string/menu_send_location_manual"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_mylocation" />
-->      
   
<item android:id="@+id/menu_update_page"
        android:title="@string/menu_update_page"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_rotate" />
<!--       
<item android:id="@+id/enable_disable_gps"
        android:title="@string/menu_enable_disable_gps"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_compass" />
--> 
<!-- 
<item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_preferences"
         />
--> 

<!-- 
<item android:id="@+id/menu_wallets"
        android:title="@string/menu_wallets"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_upload"
         />
-->
    
<item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_close_clear_cancel" />
    
<item android:id="@+id/menu_about"
        android:title="@string/menu_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@android:drawable/ic_menu_info_details" />

</menu>
